--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "poppins-font";
+  src: url("assets/fonts/Poppins-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  /* background-color: #f0eae5; */
+  font-family: "poppins-font";
+  box-sizing: border-box;
+}
+
+:root {
+  background-color: #f0eae5;
+}
