--- a/src/app/team/team-dashboard/team-dashboard.component.html
+++ b/src/app/team/team-dashboard/team-dashboard.component.html
@@ -1,6 +1,20 @@
+@if (addMemberFormOpen) {
+<app-new-member (close)="closeForm()" />
+}
+
 <div class="container">
   <p>
-    <button>add</button>
+    <button (click)="openForm()">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="56px"
+        viewBox="0 -960 960 960"
+        width="56px"
+        fill="#fff"
+      >
+        <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
+      </svg>
+    </button>
   </p>
   <section class="members-list">
     @for (member of memebers; track member.id) {
