--- a/src/app/team/team-member/team-member.component.html
+++ b/src/app/team/team-member/team-member.component.html
@@ -14,7 +14,7 @@
   </h3>
 </div>
 <p class="menu-btn">
-  <button (click)="onMenuClick(data.id, $event)">
+  <button (click)="onMenuClick(data.id)">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="34px"
