--- a/src/app/team/new-member/new-member.component.css
+++ b/src/app/team/new-member/new-member.component.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100vh;
   position: fixed;
+  top: 0;
+  left: 0;
   background-color: #7e7c7c;
   opacity: 0.6;
   z-index: 5;
