--- a/src/app/team/team-dashboard/team-dashboard.component.css
+++ b/src/app/team/team-dashboard/team-dashboard.component.css
@@ -1,12 +1,12 @@
 .container {
-  width: 94%;
+  width: 90%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 2rem;
   justify-self: center;
   align-items: center;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .container p {
