--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,14 @@
-main {
-  width: 100%;
-  height: 100vh;
+button[type="button"] {
+  padding: 0.8rem 2rem;
+  position: fixed;
+  bottom: 3rem;
+  left: 4rem;
+  border: 0;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 3rem;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  text-align: center;
+  box-shadow: rgba(82, 81, 81, 0.2) 0px 2px 8px 0px;
 }
