--- a/src/app/tasks/task/task.component.css
+++ b/src/app/tasks/task/task.component.css
@@ -6,9 +6,7 @@ section {
   width: 100%;
   height: 32rem;
   border-radius: 0.6rem;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  user-select: none;
 }
 
 header {
@@ -101,6 +99,7 @@ header p {
 .status-text {
   width: 90%;
   text-transform: capitalize;
+  user-select: none;
 }
 
 .status {
@@ -156,6 +155,11 @@ header p {
 }
 
 section:hover {
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  transition: all 0.3s;
+
   .overview p {
     font-weight: bold;
   }
