--- a/src/app/team/team-dashboard/team-dashboard.component.html
+++ b/src/app/team/team-dashboard/team-dashboard.component.html
@@ -25,6 +25,11 @@
       [(selectedMemberId)]="selectedMemberId"
       (makeManager)="onMakeManager()"
     />
+    }@empty {
+    <h1 class="empty-msg">Add team first 😊</h1>
+    <button class="load-sample" (click)="loadSampleData()">
+      load sample data
+    </button>
     }
   </section>
 </div>
