localstorage implement in tasks service

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -36,7 +36,7 @@
         completed: <span>{{ completedCount }}</span>
       </p>
       }@if (tasks.length>0 &&!inProgressCount && !completedCount) {
-      <p><span>Not started yet❗</span></p>
+      <p><span>click on task to start</span></p>
       }
     </div>
   </div>
