add avatar select option in new member form, some UI modifications

--- a/src/app/team/new-member/new-member.component.css
+++ b/src/app/team/new-member/new-member.component.css
@@ -72,6 +72,14 @@ form input {
   outline: none;
 }
 
+form input[type="image"]:first-child {
+  margin-right: 1rem;
+}
+
+.selected {
+  background-color: #8ef38e;
+}
+
 .actions button {
   width: 100%;
   padding: 1rem;
