--- a/src/app/team/team-dashboard/team-dashboard.component.html
+++ b/src/app/team/team-dashboard/team-dashboard.component.html
@@ -27,7 +27,7 @@
     />
     }@empty {
     <h1 class="empty-msg">Add team first 😊</h1>
-    <button class="load-sample" (click)="loadSampleData()">
+    <button class="load-sample-btn" (click)="loadSampleData()">
       load sample data
     </button>
     }
