--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@
   /* background-color: #f0eae5; */
   font-family: "poppins-font";
   box-sizing: border-box;
+  scrollbar-width: thin;
 }
 
 :root {
