--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,4 +11,5 @@ button[type="button"] {
   text-transform: capitalize;
   text-align: center;
   box-shadow: rgba(82, 81, 81, 0.2) 0px 2px 8px 0px;
+  z-index: 6;
 }
