--- a/src/app/team/team-dashboard/team-dashboard.component.css
+++ b/src/app/team/team-dashboard/team-dashboard.component.css
@@ -6,13 +6,12 @@
   padding: 2rem;
   justify-self: center;
   align-items: center;
-  overflow: hidden;
 }
 
 .container p {
-  width: 100%;
-  padding: 0.7rem;
-  display: flex;
+  position: fixed;
+  right: 6rem;
+  top: 4rem;
 }
 
 .container p button {
@@ -31,7 +30,9 @@
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   width: 70%;
-  padding: 1rem;
+  height: fit-content;
+  scroll-behavior: smooth;
+  padding: 10rem 1rem 4rem;
   justify-self: center;
 }
 
@@ -43,7 +44,7 @@
   padding-top: 10rem;
 }
 
-.load-sample {
+.load-sample-btn {
   grid-column: 1 / span 2;
   width: max-content;
   margin: auto;
