--- a/src/app/team/team-member/team-member.component.css
+++ b/src/app/team/team-member/team-member.component.css
@@ -6,7 +6,6 @@
   padding: 0.8rem;
   gap: 1.2rem;
   align-items: center;
-  overflow: hidden;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
 }
@@ -53,6 +52,7 @@
 
 .menu-btn {
   display: flex;
+  z-index: 6;
 }
 
 .menu-btn button {
@@ -70,7 +70,7 @@
   overflow: hidden;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
-  z-index: 10;
+  z-index: 8;
 }
 
 .menu li {
@@ -83,4 +83,14 @@
 .menu li:hover {
   background-color: #e2e2e2;
   cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: transparent;
+  width: 100%;
+  height: 100vh;
+  z-index: 4;
 }
