--- a/src/app/team/team-dashboard/team-dashboard.component.css
+++ b/src/app/team/team-dashboard/team-dashboard.component.css
@@ -57,3 +57,62 @@
   border-radius: 0.3rem;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+  }
+
+  .container p {
+    position: fixed;
+    right: 0.6rem;
+    top: 0.6rem;
+  }
+
+  .container p button {
+    padding: 0.2rem;
+    border: 0;
+    background-color: #0fa90f;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .container p button svg {
+    width: 50px;
+    height: 50px;
+  }
+
+  .members-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: fit-content;
+    justify-self: center;
+    padding: 5.2rem 1rem;
+    margin: auto;
+  }
+
+  .empty-msg {
+    font-size: 1rem;
+    text-transform: capitalize;
+    grid-column: none;
+    text-align: center;
+    padding-top: unset;
+    margin: auto;
+  }
+
+  .load-sample-btn {
+    all: unset;
+    margin: auto;
+    background-color: #0fa90f;
+    border: 0;
+    text-transform: capitalize;
+    cursor: pointer;
+    border-radius: 0.3rem;
+    padding: 0.4rem 1rem;
+    font-size: 0.8rem;
+  }
+}
