--- a/src/app/team/team-member/team-member.component.html
+++ b/src/app/team/team-member/team-member.component.html
@@ -33,8 +33,8 @@
 @if (menuOpened && selectedMemberId===data.id) {
 <ul
   [style]="{
-    left: menuCardPosition.left,
-    top: menuCardPosition.top
+    left: screenWidth > 768 && menuCardPosition.left,
+    top: screenWidth > 768 && menuCardPosition.top
   }"
   class="menu"
   (click)="closeMenu()"
