--- a/src/app/team/new-member/new-member.component.css
+++ b/src/app/team/new-member/new-member.component.css
@@ -108,3 +108,68 @@ form input[type="image"]:first-child {
   margin: 0 1ch;
   display: flex;
 }
+
+@media only screen and (max-width: 768px) {
+  dialog {
+    width: 92%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap: unset;
+  }
+
+  .top {
+    padding: 1rem;
+  }
+
+  .middle {
+    padding: 0.4rem 1.2rem;
+    gap: 0.2rem;
+  }
+
+  .middle h1 {
+    font-size: 1.6rem;
+  }
+
+  .middle h4 {
+    font-size: 1rem;
+  }
+
+  form {
+    padding: 0.6rem 0;
+  }
+
+  form input {
+    padding: 0.6rem 1rem;
+    border: 0;
+    border: 1px solid #c4c2c2;
+    font-size: 1rem;
+  }
+
+  form input[type="image"]:first-child {
+    margin: auto;
+    width: 7rem;
+  }
+
+  form input[type="image"]:last-child {
+    width: 7rem;
+    margin: auto;
+  }
+
+  .selected {
+    background-color: #8ef38e;
+  }
+
+  .actions button {
+    padding: 0.6rem;
+    border: 0;
+    margin-bottom: unset;
+    font-size: 1rem;
+  }
+
+  .bottom {
+    padding: 0.4rem;
+    font-size: 0.8rem;
+  }
+}
