responsive UI (mobile view) complete, minor state additions

--- a/src/app/tasks/task/task.component.css
+++ b/src/app/tasks/task/task.component.css
@@ -164,3 +164,9 @@ section:hover {
     font-weight: bold;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .content ul {
+    gap: 12px;
+  }
+}
