--- a/src/app/team/team-dashboard/team-dashboard.component.css
+++ b/src/app/team/team-dashboard/team-dashboard.component.css
@@ -58,6 +58,44 @@
   cursor: pointer;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+  }
+
+  .container p {
+    position: fixed;
+    right: 3rem;
+  }
+
+  .container p button {
+    padding: 0.2rem;
+    border: 0;
+    background-color: #0fa90f;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .members-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    width: 90%;
+    height: fit-content;
+    justify-self: center;
+    padding: 5.2rem 1rem;
+    margin: auto;
+  }
+
+  .empty-msg {
+    font-size: 2rem;
+    padding-top: unset;
+    margin: auto;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .container {
     width: 100%;
