--- a/src/app/tasks/new-task/new-task.component.css
+++ b/src/app/tasks/new-task/new-task.component.css
@@ -59,6 +59,35 @@ button[type="button"] {
   cursor: pointer;
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  dialog {
+    width: 70%;
+    padding: 0.8rem;
+  }
+
+  form {
+    display: grid;
+    grid-template-columns: 6fr 1fr 1fr;
+    place-content: center;
+    gap: 0.8rem;
+  }
+
+  input[type="text"] {
+    padding: 0.6rem;
+    font-size: 1.2rem;
+    text-align: left;
+    border: 1px #808080 solid;
+    border-radius: 0.4rem;
+  }
+
+  button[type="submit"] {
+    padding: 0.6em;
+    font-size: 1rem;
+    text-transform: capitalize;
+    border: 0;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   dialog {
     width: 100%;
@@ -85,9 +114,5 @@ button[type="button"] {
     font-size: 1rem;
     text-transform: capitalize;
     border: 0;
-  }
-
-  button[type="button"] {
-    display: none;
   }
 }
