--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -12,7 +12,7 @@
     <button type="button" (click)="onAdd()"><span>+</span>add task</button>
     <ul>
       @for (task of tasks; track task.id) {
-      <li (click)="changeStatus(task.id)">
+      <li>
         <span
           [class]="{
             status: true,
@@ -20,7 +20,29 @@
             inprogress: task.status === 'in-progress'
           }"
         ></span>
-        <span class="status-text">{{ task.title }}</span>
+        <span
+          [class]="{
+            'status-text': true,
+            'completed-status-text': task.status === 'completed'
+          }"
+          (click)="changeStatus(task.id)"
+          >{{ task.title }}</span
+        >
+        @if (task.status==="completed") {
+        <span class="delete-btn" (click)="deleteTask(task.id)"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#000"
+          >
+            <path
+              d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
+            />
+          </svg>
+        </span>
+        }
       </li>
       }@empty {
       <h3 class="empty-msg">No Tasks🙄</h3>
